--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build and Deploy to Server
 on:
   push:
     branches:
-      - main  # O la rama que quieras usar
+      - master  # O la rama que quieras usar
 
 jobs:
   build:
