--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
+        username: ubuntu
         key: ${{ secrets.SERVER_SSH_KEY }}
         source: ./publish/
         target: /var/www/HFPMApi/  # Ruta en tu servidor donde están los archivos
@@ -37,6 +37,6 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
+        username: ubuntu
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: sudo systemctl restart HFPMApi.service  # Nombre de tu servicio
