--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       run: dotnet restore
 
     - name: Build the project
-      run: dotnet publish -c Release -o ./publish --no-restore
+      run: dotnet publish HandsForPeaceMakingAPI.csproj -c Release -o ./publish --no-restore
 
     - name: Copy files via SSH
       uses: appleboy/scp-action@master
