--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,15 @@
 {
-  
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://0.0.0.0:5001",
+        "Certificate": {
+          "Path": "/etc/letsencrypt/live/api.handsforpeacemaking.shop/fullchain.pem",
+          "KeyPath": "/etc/letsencrypt/live/api.handsforpeacemaking.shop/privkey.pem"
+        }
+      }
+    }
+  }, 
 
   "Logging": {
     "LogLevel": {
