--- a/appsettings.json
+++ b/appsettings.json
@@ -1,15 +1,5 @@
 {
-  "Kestrel": {
-    "Endpoints": {
-      "Https": {
-        "Url": "https://0.0.0.0:5001",
-        "Certificate": {
-          "Path": "/etc/letsencrypt/live/api.handsforpeacemaking.shop/fullchain.pem",
-          "KeyPath": "/etc/letsencrypt/live/api.handsforpeacemaking.shop/privkey.pem"
-        }
-      }
-    }
-  },
+  
 
   "Logging": {
     "LogLevel": {
@@ -24,5 +14,11 @@
     "LocalConnection": "Host=localhost;Database=HandsForPeaceMaking;Username=postgres;Password=abc",
     "AWSConnection": "Server=ls-96d7ad6c503e8235c20a4e6bde3e2833fa40a384.cragicqiwn9l.us-east-2.rds.amazonaws.com;Database=HandsForPeaceMaking;Port=5432;User Id=dbmasteruser;Password=f_dAYh.V]`P^6So3jT4[R<m2<u*yx(bJ;Ssl Mode=Require;"
 
+  },
+
+  "SMTP": {
+    "Email": "2024simposio@gmail.com",
+    "Password": "wwjdauaxgnmzqbpi",
+    "CadenaEncriptacion": "12345678912345aa"
   }
 }
